# mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.wallet  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  server.json  smithery.yaml
.claude/specs/: 2026-06-12-inbound-auth.md  2026-06-13-mcp-instrumentation.md  2026-06-14-de-v1-ify-skill.md  2026-06-14-mcp-stdio-capabilities.md  2026-06-14-self-custody-wallet-image.md  2026-06-25-mcp-registry-server-json.md  2026-07-10-mcp-stage4-wallet-image-console.md  2026-07-10-rename-tui-product.md  2026-07-10-stage4-fixpr-claw-publish.md  2026-07-11-stage5-execute-tools.md  2026-07-11-stage6-e2e-acceptance.md  2026-07-15-mcp-protocol-negotiation.md  2026-07-16-rustok-easy-install-epic.md  2026-07-17-mcp-repo-recovery.md  2026-07-17-pr2.3a-connect-claude.md  2026-07-17-pr2.3b-connect-cursor-hermes.md  2026-07-20-pr2.3c-update-uninstall.md  2026-07-20-pr3.2-install-sh.md  2026-07-21-pr4.1-docs-one-command.md  2026-07-21-pr4.2-release-0.8.0.md  2026-07-22-0.8.2-honesty-batch.md  2026-07-22-cosign-optional-installer.md  2026-07-24-autonomous-funnel-spike.md  2026-07-24-mcp-ceiling-integration.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml  sync-check.yml  test-distribution.yml  wallet-publish.yml
cli/: rustok
docs/: CONFIGURATION.md  INSTALL.md  TROUBLESHOOTING.md
scripts/: install.sh  rustok-wallet-entrypoint.sh
skills/rustok-wallet/: SKILL.md  claw.json
skills/rustok-wallet-tui/: SKILL.md  claw.json
skills/rustok-wallet-tui/scripts/: health-check.sh
skills/rustok-wallet/examples/: policy.json
skills/rustok-wallet/scripts/: health-check.sh
src/: main.rs
src/rustok_mcp/: __init__.py  auth.py  capabilities.py  config.py  gateway.py  handlers.py  health.py  main.py  protocol.py  sse.py  stdio.py  telemetry.py  tools.py
tests/: __init__.py  conftest.py  test_amount_units.py  test_auth.py  test_balance_units.py  test_capabilities.py  test_claw_manifest.py  test_config.py  test_docs_container_discovery.py  test_docs_one_command.py  test_docs_secret_delivery.py  test_gateway.py  test_handlers.py  test_health.py  test_installer_pins.py  test_protocol.py  test_scaffold.py  test_sse.py  test_stdio.py  test_telemetry.py  test_tools.py  test_version_consistency.py
tests/e2e/: __init__.py  chain.py  conftest.py  console.py  mcp_client.py  podman.py  test_approval_e2e.py  test_expiry_e2e.py  test_password_file_e2e.py  test_redaction.py  wallet.py
tests/install/: run-tests.sh
tests/install/stub-bin/: cosign  curl  podman
tests/shim/: pty-init.py  run-tests.sh
tests/shim/stub-bin/: claude  podman
