[package]
name = "rustok-mcp"
description = "MCP server for Rustok — HTTP and stdio transports"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
authors = ["Rustok Team"]

[[bin]]
name = "rustok-mcp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "signal", "fs", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
uuid = "1"
alloy-primitives = "0.8"

[dev-dependencies]
tokio-test = "0.4"
