[project]
name = "rustok-mcp"
version = "0.5.0"
description = "Rustok MCP Server — FastAPI with SSE and stdio transports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
]

[project.scripts]
rustok-mcp = "rustok_mcp.main:run"
rustok-mcp-stdio = "rustok_mcp.stdio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.10",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "S",   # bandit security
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert in tests is fine

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
