[project]
name = "rustok-mcp"
version = "0.6.0"
description = "Rustok MCP Server — FastAPI with SSE and stdio transports"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.14.2",
    "opentelemetry-sdk>=1.42.1",
    "opentelemetry-exporter-otlp-proto-http>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-httpx>=0.63b1",
]

[project.scripts]
rustok-mcp = "rustok_mcp.main:run"
rustok-mcp-stdio = "rustok_mcp.stdio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.10",
    # Acceptance suite (tests/e2e): a pty for the console TUI, and a terminal
    # emulator to assert on the RENDERED screen — the raw pty stream interleaves
    # ANSI escapes with text and cannot be matched reliably.
    "pexpect>=4.9",
    "pyte>=0.8",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "S",   # bandit security
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert in tests is fine
# The acceptance suite drives the shipped wallet image through podman. Every call
# is a fixed argv, without `shell=True` and without user input, so the bandit
# preconditions for S603 (untrusted input) and S607 (partial path) do not hold —
# the podman binary is resolved via shutil.which in tests/e2e/podman.py.
"tests/e2e/*" = ["S101", "S603", "S607"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
# The acceptance suite needs podman and the shipped wallet image, so it is NOT part
# of the default run (CI has neither). A marker alone would not do that — pytest
# collects marked tests unless they are deselected here. Run it explicitly:
#   uv run pytest -m e2e        (7 scenarios, ~2 min)
#   uv run pytest -m e2e_slow   (expiry: waits out the 15-minute pending TTL)
# A -m on the command line overrides this default.
addopts = ["-m", "not e2e and not e2e_slow"]
markers = [
    "e2e: acceptance against the shipped wallet image (needs podman)",
    "e2e_slow: acceptance that waits out the real 15-minute pending TTL",
]
